# LLMGuidedSeeding

./: .gitignore  __init__.py  attempted_policy.py  chatGPT_written_utils.py  cleaned_code.txt  corrected_code.py  debug.py  debug_code_exec.py  debug_ensure_imports.py  debug_prompt_replacement.py  execute_policy.py  feedback.txt  generate_policies.py  generate_policies_failure_tolerance.py  install.sh  irl_path.csv  llm_utils.py  main.py  makeGIF.py  package-lock.json  policy.txt  policyFail.py  policyFail.txt  post-ensure_imports.txt  projected_pcd.pcd  pyproject.toml  random_constraints.pickle  random_path.csv  rawCode.txt  rehearse_policies-old.py  rehearse_policies.py  setup.py  setup_llm_server.sh  step0.py  tape_constraints.pickle  test_memory.py  test_plots.py  tmp.txt  view_pcd.py
LLMGuidedSeeding_pkg/: __init__.py  llm_guided_obj_detection.py  requirements.txt
LLMGuidedSeeding_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
UI/: __init__.py  convo_interface.py  projected_pcd.pcd  still_frame.npy
UI_pkg/: __init__.py  pyproject.toml  tmp_interface.py
UI_pkg/UserInterface/: .gitignore  __init__.py
UI_pkg/UserInterface/backend/: application.py  transform_main.py
UI_pkg/UserInterface/backend/app/: __init__.py  singleImage_stream.py  sketch_boundary.py  transform.py  views.py
UI_pkg/UserInterface/backend/app/templates/: player.html
UI_pkg/UserInterface/frontend/app/: package-lock.json  package-old.json  package.json
UI_pkg/UserInterface/frontend/app/src/: App.css  App.js
clean_env/: pyvenv.cfg
configs/: cam_models.py  commonObjs.txt  (+2 more)
(+236 files in other folders)
