[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "UserInterface"
version = "0.1.0"
description = "A very special project"
authors = [
    { name = "Kristen Such", email = "kristen.such@colorado.edu" },
    { name = "Miles Mena", email = "miles.mena@colorado.edu" }
]

packages = [
    { include = "UI_pkg" },
    { include = "UI_pkg.UserInterface.backend.app" }
]
